(#1) bug: Problem hide sizebox border.

--- a/container/index.html
+++ b/container/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="title-bar">
-    <div id="title">Custom Title Bar</div>
+    <div id="title"></div>
     <div id="title-bar-buttons">
         <div id="minimize" class="button">-</div>
         <div id="maximize" class="button">□</div>
